# merlin

./: README.md  pyproject.toml
.github/workflows/: publish.yaml  test.yaml
resources/: spark.yaml
src/merlin/: connect.py  spark.py
